update deps, improve dev and production config